# notmuch-rs

./: Cargo.toml  README.md
src/: db.rs  lib.rs  message.rs  query.rs  status.rs  tags.rs
sys/: Cargo.toml  README.md  build.rs  wrapper.h
sys/src/: lib.rs
tests/: common.rs  db.rs  query.rs
