[package]
name = "notmuch-rs"
version = "0.1.0"
edition = "2018"
authors = ["Austin D. Ray <austin@austinray.io>"]
description = "Rust interface for libnotmuch"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    ".",
    "sys"
]

[dependencies]
notmuch-sys = { package = "sys", path = "./sys" }
