[package]
name = "notmuch-rs"
version = "0.1.0"
edition = "2018"
authors = ["Austin D. Ray <austin@austinray.io>"]
description = "Rust interface for libnotmuch"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    ".",
    "sys"
]

[dependencies]
notmuch-sys = { package = "sys", path = "./sys" }

[dev-dependencies]
lettre = { version = "0.10.0-rc.4", features = ["builder"] }
maildir = "0.5"
tempfile = "3"
